"""add default stage preferences table

Revision ID: b5e6c0f11f30
Revises: d8108a311ced
Create Date: 2025-08-16 13:45:05.323100

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
import sqlmodel

from app.db.custom_types.color import ColorType

# revision identifiers, used by Alembic.
revision: str = 'b5e6c0f11f30'
down_revision: Union[str, Sequence[str], None] = 'd8108a311ced'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('default_stages_preferences',
    sa.Column('stage_name', sqlmodel.sql.sqltypes.AutoString(), nullable=False),
    sa.Column('color', ColorType(), nullable=True),
    sa.PrimaryKeyConstraint('stage_name')
    )
    op.create_table('user_stages_preferences',
    sa.Column('stage_name', sqlmodel.sql.sqltypes.AutoString(), nullable=False),
    sa.Column('user_id', sa.Uuid(), nullable=False),
    sa.Column('color', ColorType(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('stage_name', 'user_id')
    )
    op.drop_table('stages_preferences')
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('stages_preferences',
    sa.Column('stage_name', sa.VARCHAR(), autoincrement=False, nullable=False),
    sa.Column('user_id', sa.UUID(), autoincrement=False, nullable=False),
    sa.Column('color', sa.VARCHAR(), autoincrement=False, nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('stages_preferences_user_id_fkey')),
    sa.PrimaryKeyConstraint('stage_name', 'user_id', name=op.f('stages_preferences_pkey'))
    )
    op.drop_table('user_stages_preferences')
    op.drop_table('default_stages_preferences')
    # ### end Alembic commands ###
