@startuml database_schema

skinparam Linetype ortho
skinparam Nodesep 80
skinparam Ranksep 50
skinparam backgroundColor transparent

hide circle

entity users {
    *id: uuid
    ---
    *username: varchar
    *password_hash: varchar
}

entity groups {
    *id: uuid
    ---
    *name: varchar
}

entity users_groups {
    *user_id: <<FK users>>
    *group_id: <<FK groups>>
}

entity user_stages_preferences {
    *stage_name: varchar
    *user_id: <<FK users>>
    ---
    *color: varchar
}

entity organisms {
    *id: uuid
    ---
    *name: varchar
    description: varchar
    *sequences_filename: varchar
    *metadata_filename: varchar
    *take_first_transcript_only: bool
    *public: bool
}

entity organisms_groups {
    *organism_id: uuid
    *group_id: uuid
}

entity default_stages_preferences {
    *stage_name: varchar
    *color: varchar
}

entity motifs {
    *id: uuid
    ---
    *name: varchar
    *is_public: bool
    user_id: <<FK users>>
}

entity motif_definitions {
    *definition: varchar
    *motif_id: <<FK motifs>>
}

entity alembic_version {
    *version_num: varchar
}

users  ||..o{ users_groups
groups ||..o{ users_groups

users ||..o{ user_stages_preferences

groups ||..o{ organisms_groups
organisms ||..o{ organisms_groups

motifs ||.l.|{ motif_definitions

@enduml